Add lighter ruby color in repo section

--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ hr {
     border-radius: 0.3rem;
     background-color: var(--grey-dark-1); }
     .repo-item__language-text--ruby {
-      background-color: #9e267a; }
+      background-color: #f387d3; }
     .repo-item__language-text--html {
       background-color: #e2574c; }
     .repo-item__language-text--javascript {
