--- a/sass/components/_repo.scss
+++ b/sass/components/_repo.scss
@@ -30,7 +30,7 @@
     background-color: var(--grey-dark-1);
 
     &--ruby {
-      background-color: #9e267a;
+      background-color: #f387d3;
     }
     &--html {
       background-color: #e2574c;
