--- a/sass/components/_repo.scss
+++ b/sass/components/_repo.scss
@@ -44,8 +44,11 @@
   }
 
   &__description {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
+    margin: 2rem 0 1rem 0;
     width: 98%;
+
+    p {
+      margin-right: 3rem;
+    }
   }
 }
