--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,8 @@ body {
     body .repo-item__description {
       text-align: center;
       max-width: 40rem; }
+      body .repo-item__description p {
+        margin-right: 0; }
   body .nav-menu {
     width: 100%;
     opacity: 1; }
