--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -116,6 +116,10 @@ body {
     &__description {
       text-align: center;
       max-width: 40rem;
+
+      p {
+        margin-right: 0;
+      }
     }
   }
 
