--- a/css/style.css
+++ b/css/style.css
@@ -140,13 +140,11 @@ hr {
   font-size: var(--main-text-size);
   letter-spacing: 0.05rem; }
 
-.text-underline--1 {
-  text-decoration: none;
-  border-bottom: solid 0.2rem #f7836681; }
+.text-highlight--1 {
+  background-color: #f7836625; }
 
-.text-underline--2 {
-  text-decoration: none;
-  border-bottom: solid 0.2rem #9ef5918f; }
+.text-highlight--2 {
+  background-color: #f1f15236; }
 
 .u-margin-bottom {
   margin-bottom: 4rem; }
