--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -48,14 +48,12 @@ hr {
   letter-spacing: 0.05rem;
 }
 
-.text-underline--1 {
-  // text-decoration: underline solid var(--red);
-  text-decoration: none;
-  border-bottom: solid 0.2rem #f7836681;
+.text-highlight--1 {
+  background-color: #f7836625;
 }
 
-.text-underline--2 {
-  // text-decoration: underline solid var(--yellow);
-  text-decoration: none;
-  border-bottom: solid 0.2rem #9ef5918f;
+.text-highlight--2 {
+  background-color: #f1f15236;
 }
+
+// #9ef5912a
