--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -25,8 +25,9 @@ hr {
   letter-spacing: 0.1rem;
 }
 
-.about-box__text {
-  font-size: 2rem;
+.about-box__description-box {
+  font-size: 3.8rem;
+  line-height: 7.5rem;
   letter-spacing: 0.05rem;
 }
 
@@ -49,11 +50,9 @@ hr {
 }
 
 .text-highlight--1 {
-  background-color: #f7836625;
+  background-color: #f7836623;
 }
 
 .text-highlight--2 {
-  background-color: #f1f15236;
+  background-color: #f1f1521e;
 }
-
-// #9ef5912a
