Change text background to text color

--- a/css/style.css
+++ b/css/style.css
@@ -147,10 +147,10 @@ hr {
   letter-spacing: 0.05rem; }
 
 .text-highlight--1 {
-  background-color: #f7836623; }
+  color: #c55033; }
 
 .text-highlight--2 {
-  background-color: #f1f1521e; }
+  color: #a7a722; }
 
 .u-margin-bottom {
   margin-bottom: 4rem; }
