--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -50,9 +50,9 @@ hr {
 }
 
 .text-highlight--1 {
-  background-color: #f7836623;
+  color: #c55033;
 }
 
 .text-highlight--2 {
-  background-color: #f1f1521e;
+  color: #a7a722;
 }
