--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,27 @@ hr {
     .about-box__text:first-child {
       margin-bottom: 3.5rem; }
 
+.contact-box a {
+  color: var(--main-text-color); }
+
+.text-underline--1 {
+  text-decoration: none;
+  border-bottom: solid 0.2rem #ec7e627e; }
+  .text-underline--1:hover {
+    border-bottom: solid 0.25rem #8638257e; }
+
+.text-underline--2 {
+  text-decoration: none;
+  border-bottom: solid 0.2rem #84e47675; }
+  .text-underline--2:hover {
+    border-bottom: solid 0.25rem #44a13575; }
+
+.text-underline--3 {
+  text-decoration: none;
+  border-bottom: solid 0.2rem #e2e26a96; }
+  .text-underline--3:hover {
+    border-bottom: solid 0.25rem #bdbd4496; }
+
 .project-item {
   justify-content: space-between;
   align-items: center;
