--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "layout/footer";
 
 @import "components/about-box";
+@import "components/contact";
 @import "components/project";
 @import "components/repo";
 
