--- a/sass/components/_repo.scss
+++ b/sass/components/_repo.scss
@@ -26,16 +26,16 @@
     background-color: var(--grey-dark-1);
 
     &--ruby {
-      background-color: #f387d3;
+      background-color: #a63b0657;
     }
     &--html {
-      background-color: #e2574c;
+      background-color: #e2564c86;
     }
     &--javascript {
-      background-color: #f1e05a;
+      background-color: #f1df5abd;
     }
     &--css {
-      background-color: #8a6bb4;
+      background-color: #896bb486;
     }
   }
 
